# AD-TRAIT

./: .gitmodules  eval1.bash  eval1.sh  gradient_results_all.csv  jacobian_results_all.csv  partial_results.md  plot.py
C++/: .gitignore  CMakeLists.txt  Untitled spreadsheet - autodiff_benchmark_results.csv  autodiff_benchmark_results.csv  eval1.sh  forward.cpp  function.hpp  main.cpp  reverse.cpp
Julia/: ad_eval.jl  autodiff_benchmark_results.csv  eval.sh
Python/: .gitignore  ad_eval.py  autodiff_benchmark_results.csv  autodiff_benchmark_results_gpu.csv  eval1.sh  pyproject.toml
Rust/: Cargo.toml  eval1.sh
Rust/results/: Untitled spreadsheet - eval1.csv  eval1.csv  eval1_burn.csv
Rust/src/: burn.rs  csv_utils.rs  eval1.rs  eval2.rs  lib.rs  live_demo.rs
Video/: live_coding_example.txt
