[package]
name = "ad_-trait-eval"
version = "0.0.1"
edition = "2024"

[dependencies]
ad_trait = { git = "https://github.com/djrakita/ad_trait" }
apollo-rust-linalg-adtrait = { git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-linalg-adtrait"}
apollo-rust-linalg = { git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-linalg"}
apollo-rust-spatial = { git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-spatial"}
apollo-rust-spatial-adtrait = { git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-spatial-adtrait"}
apollo-rust-robotics-core = {git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-robotics-core"}
apollo-rust-robotics-core-adtrait={git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-robotics-core-adtrait"}
apollo-rust-modules = {git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-modules"}
apollo-rust-robotics= {git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-robotics"}
apollo-rust-robotics-adtrait={git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-robotics-adtrait"}
apollo-rust-lie = {git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-lie"}
apollo-rust-lie-adtrait={git = "https://github.com/Apollo-Lab-Yale/apollo-rust", package = "apollo-rust-lie-adtrait"}
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
rand = "0.9.0"
csv = "1.3.1"
burn = { version = "0.16.0", features = ["autodiff", "wgpu", "ndarray"] }

[lib]
name = "ad_trait_eval"
crate-type = ["cdylib","rlib"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
